--- a/detail_employe.html
+++ b/detail_employe.html
@@ -14,4 +14,6 @@ Code postal: <input name="cp" type="text" value="57481" />
 Ville : <input name="ville" type="text" value="Beverly Hills" /> <br />
 Email : <input name="mail" type="text" value="brad.pitt@efrei.fr" /> <br /> <br /> 
  
-<input name="detail" type="button" value="Enregistrez" /> <input name="detail" type="button" value="Annulez" />
+<input name="detail" type="button" value="Enregistrez" /> 
+<input name="detail" type="button" onclick="window.location.href='liste_employes.html';"
+value="Annulez" />
