Commit fonctionnalité #6 par Thomas Song

--- a/login.html
+++ b/login.html
@@ -16,4 +16,4 @@ Login <br /><br />
 </table>
 <br />
 
-<input name="ok" type="button" value="Login" onclick="window.location.href='page_lien_liste.html';"/>
+<input name="ok" type="button" value="Login" onclick="window.location.href='page_lien_liste.html';"/><input name="ok" type="button" value="J'ai changé d'avis" onclick="window.location.href='bye.html';"/>
