Commit fonctionnalité #4 par Serena NGATCHOU TAENGA

--- a/login.html
+++ b/login.html
@@ -1,6 +1,8 @@
 <strong>IDP 2021</strong> <br /><br />
 
 Login <br /><br />
+Veuillez entrer votre login et votre mot de passe <br /><br />
+
 
 <table style="border:0px; spacing:5; padding: 2px;">
     <tbody>
